practice/devops_learning/learning-4/argo-rollout/deployment-blue-green.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: my-app

spec:
  replicas: 3

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: my-app

  template:
    metadata:
      labels:
        app: my-app

    spec:
      containers:
      - name: my-app
        image: docker.io/luckygun/devops-learning:v1

  strategy:
    blueGreen:
      activeService: my-app-active
      previewService: my-app-preview

      autoPromotionEnabled: false

      scaleDownDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-active

spec:
  selector:
    app: my-app

  ports:
    - port: 80
      targetPort: 80

  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-preview

spec:
  selector:
    app: my-app

  ports:
    - port: 80
      targetPort: 80

  type: LoadBalancer
